Bug 391296 - Wrong font
Summary: Wrong font
Status: RESOLVED FIXED
Alias: None
Product: filelight
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Martin Sandsmark
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-03-02 13:02 UTC by Weverton Marques
Modified: 2020-03-28 18:11 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 20.08.0
Sentry Crash Report:


Attachments
The fonts in the red rectangle. (69.28 KB, image/png)
2018-03-02 13:02 UTC, Weverton Marques
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Weverton Marques 2018-03-02 13:02:56 UTC
Created attachment 111137 [details]
The fonts in the red rectangle.

While a directory is scanned, the font showing the number of files is different of the rest of the UI.
Comment 1 Patrick Silva 2018-03-12 14:30:59 UTC
Confirmed on Arch Linux, filelight 17.12.3.
Comment 2 Shubham 2020-03-28 14:31:59 UTC
Git commit b190c6da411cb258bae40cafe0d9dde720529338 by Shubham Jangra.
Committed on 28/03/2020 at 14:31.
Pushed by shubham into branch 'master'.

Fix font bug in ProgressBox

Summary:

Instead of using system's default font, it was using the best suited font which was matching with system's look and feel.

Test Plan:
Before:
{F7888229}
After:
{F7888230}

Reviewers: sandsmark, ngraham

Reviewed By: sandsmark, ngraham

Subscribers: kde-utils-devel

Differential Revision: https://phabricator.kde.org/D26727

M  +0    -1    src/progressBox.cpp

https://commits.kde.org/filelight/b190c6da411cb258bae40cafe0d9dde720529338