Fix font bug in ProgressBox

Summary:
BUG: 391296

Instead of using system's default font, it was using the best suited font which was matching with system's look and feel.

Test Plan:
Before:
{F7888229}
After:
{F7888230}

Reviewers: sandsmark, ngraham

Reviewed By: sandsmark, ngraham

Subscribers: kde-utils-devel

Differential Revision: https://phabricator.kde.org/D26727